# agente_vendas

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  patch.diff
.github/: code-review.yml  dependabot.yml
.github/workflows/: ci.yml
apps/fastapi/: .coverage  Dockerfile  benchmark_memory_hydrate.py  pyproject.toml  pytest.ini  requirements.txt
apps/fastapi/app/: __init__.py  config.py  main.py
apps/fastapi/app/graph/: __init__.py  agent.py  prompts.py  state.py
apps/fastapi/app/graph/nodes/: __init__.py  agent_execute.py  agent_followup.py  agent_router.py  agent_sales.py  agent_support.py  l3_search.py  memory_gate.py  memory_hydrate.py  parse_classify.py  post_process.py
apps/fastapi/app/services/: __init__.py  cache.py  jina.py  llm.py  minio.py  postgres.py  redis.py  voice.py
apps/fastapi/app/tools/: __init__.py  registry.py
apps/fastapi/app/tools/core/: __init__.py  customers.py  orders.py  products.py
apps/fastapi/tests/: __init__.py  test_agent_followup.py  test_agent_router.py  test_agent_sales.py  test_agent_support.py  test_customers.py  test_l3_search.py  test_memory_gate.py  test_parse_classify.py  test_post_process.py  test_registry.py
apps/hono/: .eslintrc.cjs  Dockerfile  Dockerfile.dev  package-lock.json  package.json
apps/nestjs/: .eslintrc.js  Dockerfile  Dockerfile.dev  jest.config.ts  package-lock.json  package.json  tsconfig.json
apps/web/: Dockerfile  next.config.mjs  package-lock.json  package.json  tsconfig.json
docs/: improvements.md
scripts/: setup.sh  test-e2e.sh
(+86 files in other folders)
